--- a/index.html
+++ b/index.html
@@ -1022,6 +1022,60 @@
   </div>
 </div>
 
+    <section>
+    <section id="current-highlights" style="padding: 60px 8%; background: #ffffff;">
+    <h2 class="section-title">Latest Updates</h2>
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px;">
+        
+        <div class="video-card-3d" data-aos="fade-right">
+            <div style="background: var(--primary); color: white; padding: 5px 15px; font-size: 0.8rem; font-weight: bold;">NEW VIDEO - 1</div>
+            <div class="video-box-inner">
+                <iframe src="https://ik.imagekit.io/18itosdvc/1%20no.mp4" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video-card-info">
+                <h3>কৃষ্ণ কৃষ্ণ হরে হরে,গাছ লাগবো ঘরে ঘরে</h3>
+                <p><strong>Uploaded : </strong>27 January 2026</p>
+            </div>
+        </div>
+
+<div class="video-card-3d" data-aos="fade-right">
+            <div style="background: var(--primary); color: white; padding: 5px 15px; font-size: 0.8rem; font-weight: bold;">NEW VIDEO - 2</div>
+            <div class="video-box-inner">
+                <iframe src="https://ik.imagekit.io/18itosdvc/2%20no.mp4" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video-card-info">
+                <h3>GEOID STUDY CENTRE</h3>
+                <p><strong>Uploaded : </strong>27 January 2026</p>
+            </div>
+        </div>
+
+        <div data-aos="fade-left">
+            <div style="background: var(--secondary); color: black; padding: 5px 15px; font-size: 0.8rem; font-weight: bold; display: inline-block; margin-bottom: 10px;">RECENT PHOTOS</div>
+            <div class="gallery-container" style="padding: 0; grid-template-columns: repeat(2, 1fr);">
+                <div class="gallery-item">
+                    <img src="https://ik.imagekit.io/18itosdvc/P-1.jpeg" alt="Recent Event 1">
+                    <div class="caption">Tree Plantation -1</div>
+                </div>
+                <div class="gallery-item">
+                    <img src="https://ik.imagekit.io/18itosdvc/P%20-%202.jpeg" alt="Recent Event 2">
+                    <div class="caption">New Achievement</div>
+                </div>
+                <div class="gallery-item">
+                    <img src="https://ik.imagekit.io/18itosdvc/P-3.jpeg" alt="Recent Event 2">
+                    <div class="caption">New Achievement</div>
+                </div>
+                <div class="gallery-item">
+                    <img src="https://ik.imagekit.io/18itosdvc/P-4.jpeg" alt="Recent Event 2">
+                    <div class="caption">New Achievement</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<hr style="border: 0; height: 1px; background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));">
+</section>
+
+    
 <section class="aec-container">
     <div class="aec-card" data-aos="zoom-in">
         <div class="aec-icon">
@@ -1740,6 +1794,7 @@ updateVisitorDisplay();
 </body>
 
 </html>
+
 
 
 
